force-app/main/default/objects/Policy__c/fields/opportunity_name__c.field-meta.xml
<CustomField>
    <fullName>opportunity_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>opportunity name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>