force-app/main/default/objects/Policy__c/fields/parent_policy__c.field-meta.xml
<CustomField>
    <fullName>parent_policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>parent policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>