force-app/main/default/objects/Policy__c/fields/policy_number__c.field-meta.xml
<CustomField>
    <fullName>policy_number__c</fullName>
    <label>policy number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>