force-app/main/default/objects/Policy__c/fields/Renew_Policy__c.field-meta.xml
<CustomField>
    <fullName>Renew_Policy__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Renew Policy</label>
    <type>Checkbox</type>
</CustomField>